# jsonbuilder

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
.hooky/: pre-commit
src/: build.rs  config.rs  context.rs  error.rs  lib.rs  reader.rs
src/builder/: block.rs  error.rs  expression.rs  mod.rs  statement.rs
src/grammar/: jsonbuilder.pest
src/parser/: block.rs  error.rs  expression.rs  mod.rs  statement.rs
templates/tests/: array_template_test.json.jb  object_template_test.json.jb
